k8-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: go-web-app
spec:
  selector:
    app: go-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
